# Forma-OSS

./: .dockerignore  .env.example  .gitignore  .vercelignore  LICENSE  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt  vercel.json
backend/: .env.example  Dockerfile  a2a.py  auth.py  billing_api.py  cli.py  database.py  design_research.py  firecrawl_webhooks_api.py  image_providers.py  image_text_providers.py  job_source_usage.py  job_store.py  llm_providers.py  logging_config.py  logs_api.py  main.py  models.py  observability.py  public_api.py  pyproject.toml  requirements.txt  runtime_config.py  seed_db.py  storage.py  streams_api.py  user_api_keys_api.py  user_integrations_api.py  user_settings_api.py  utils.py  validation.py  video_providers.py  video_storage.py
backend/agents/: __init__.py  firecrawl_mcp.py  orchestrator.py  prompt_compaction.py  web_research_workflow.py  workflows.py
benchmarks/: __init__.py  benchmark_models.py  benchmark_offline.py  eval_structured_planning.py
blueprint-tui/: Cargo.toml  README.md
blueprint-tui/src/: agents.rs  app.rs  blueprint.rs  lib.rs  main.rs  storage.rs  ui.rs
blueprint_core/: __init__.py  _version.py  api_keys.py  clarifying_questions.py  continuous_agents.py  continuous_openai_jobs.py  database.py  debug.py  external_sources.py  generation.py  huggingface_artifacts.py  image_providers.py  images.py  iteration.py  job_source_usage.py  lattice.py  lattice_agents.py  llm.py  llm_providers.py  logs.py  models.py  observability.py  openai_streams.py  pipeline.py  project_chat.py  project_objects.py  prompt_continuity.py  runtime.py  runtime_config.py  selectors.py  terminal_dashboard.py  terminal_images.py  user_integrations.py  utils.py  validation.py  video_prompts.py  video_review.py
docs/: a2a.md  agents.md  api-testing.md  architecture.md  backend.md  database.md  debugging.md  development.md  examples.md  frontend.md  hardware-ir.md  lattice.md  local-models.md  roadmap.md  setup.md  validation.md
examples/: .gitignore  README.md  async_glm_openai_prompt.py  async_project_objects.py  simple_async_project_objects.py  simple_sync_project_objects.py  sync_project_objects.py
fabricator/: README.md  __init__.py  __main__.py  main.py
frontend/: .dockerignore  Dockerfile  middleware.ts  package-lock.json  package.json
notebooks/: redis_vlm_video_labeling_colab.ipynb  redis_yolo_video_labeling_colab.ipynb
rust/: Cargo.toml  README.md
rust/blueprint-edge/: Cargo.toml
rust/blueprint-edge/config/: example.toml
rust/blueprint-edge/src/: lib.rs  main.rs
rust/blueprint-edge/tests/: cli.rs
scripts/: append-stream-event.py  benchmark.sh  check-local-supabase-integrations.py  dev-core-logs.sh  dev.sh  enqueue-llm-job.py  enqueue-openai-job.py  init-continuous-stream.py  listen-continuous-stream.py  migrate-llm-env-to-supabase.py  probe-runpod-response-format.py  render-mech-video.py  requeue-failed-openai-jobs.py  run-continuous-agents.py  run-continuous-llm-jobs.py  run-continuous-openai-jobs.py  run-llm-smoke-tests.py  run-terminal-dashboard.py  seed-firecrawl-prompt-jobs.py  show-image-generation.py  show-terminal-image.py  smoke-image-provider.py  stream-openai-to-continuous-stream.py  test-rust-stream-configs.py  test-rust.sh  test.sh  upload-artifacts-to-huggingface.py  verify-contra-mcp.py  verify-llm-providers.py  verify-openai.py  verify-production-env.py  verify-runpod-serverless.py
supabase/: config.toml
tests/: __init__.py  test_a2a_image_logging.py  test_a2a_user_integrations.py  test_async_glm_openai_example.py  test_benchmarks.py  test_clarifying_questions.py  test_clerk_auth.py  test_continuous_agents.py  test_core_package.py  test_database_config.py  test_database_schema_drift.py  test_debug_mode.py  test_developer_api_surface.py  test_eval_structured_planning.py  test_job_progress.py  (+30 more)
(+69 files in other folders)
