[package]
name = "blueprint-edge"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
toml = "0.9"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
